Added button sort script

--- a/index.html
+++ b/index.html
@@ -176,8 +176,19 @@
 					<h6>| Video View</h6>
 					<h2>Get a Closer Look & Different Feeling</h2>
 					<div class="video-frame">
-						<img src="images/video-frame.jpg" />
-						<a href="https://www.youtube.com/watch?v=-lUv-Mt2QD4" target="_blank"><i class="fa fa-play"></i></a>
+						<!-- <img src="images/video-frame.jpg" /> -->
+
+						<iframe
+							width="560"
+							height="315"
+							src="https://www.youtube.com/embed/-lUv-Mt2QD4?si=_WkM98QBVyfV_PqM"
+							title="YouTube video player"
+							frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+							referrerpolicy="strict-origin-when-cross-origin"
+							allowfullscreen
+						></iframe>
+						<div class="shadowbox"></div>
 					</div>
 				</div>
 
