--- a/properties.html
+++ b/properties.html
@@ -78,15 +78,15 @@
 
 				<div class="property__cards container flex">
                     <div class="property__btn-container flex">
-						<button class="btn__general active">Select All</button>
-						<button class="btn__general">Apartment</button>
-						<button class="btn__general">Villa House</button>
-						<button class="btn__general">Penthouse</button>
+						<button class="btn__general active" id="selectAll">Select All</button>
+						<button class="btn__general" id="sortApartment">Apartment</button>
+						<button class="btn__general" id="sortLuxuryVilla">Luxury VIlla</button>
+						<button class="btn__general" id="sortPenthouse">Penthouse</button>
 					</div>
-					<div class="card flex">
+					<div class="card item flex" data-name="Luxury Villa">
 						<img src="images/property-01.jpg" />
 						<div class="card__header flex">
-							<span class="card__flag" id="luxury">Luxury Villa</span>
+							<span class="card__flag">Luxury Villa</span>
 							<h6 class="card__price">$2.264.000</h6>
 						</div>
 
@@ -98,10 +98,10 @@
 						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 					</div>
 
-					<div class="card flex">
+					<div class="card item flex" data-name="Luxury Villa">
 						<img src="images/property-02.jpg" />
 						<div class="card__header flex">
-							<span class="card__flag" id="luxury">Luxury Villa</span>
+							<span class="card__flag">Luxury Villa</span>
 							<h6 class="card__price">$1.180.000</h6>
 						</div>
 
@@ -113,10 +113,10 @@
 						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 					</div>
 
-					<div class="card flex">
+					<div class="card item flex" data-name="Luxury Villa">
 						<img src="images/property-03.jpg" />
 						<div class="card__header flex">
-							<span class="card__flag" id="luxury">Luxury Villa</span>
+							<span class="card__flag">Luxury Villa</span>
 							<h6 class="card__price">$1.460.000</h6>
 						</div>
 
@@ -128,10 +128,10 @@
 						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 					</div>
 
-					<div class="card flex">
+					<div class="card item flex" data-name="Apartment">
 						<img src="images/property-04.jpg" />
 						<div class="card__header flex">
-							<span class="card__flag" id="apartment">Apartment</span>
+							<span class="card__flag">Apartment</span>
 							<h6 class="card__price">$584.500</h6>
 						</div>
 
@@ -143,10 +143,10 @@
 						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 					</div>
 
-					<div class="card flex">
+					<div class="card item flex" data-name="Penthouse">
 						<img src="images/property-05.jpg" />
 						<div class="card__header flex">
-							<span class="card__flag" id="penthouse">Penthouse</span>
+							<span class="card__flag">Penthouse</span>
 							<h6 class="card__price">$925.600</h6>
 						</div>
 
@@ -158,10 +158,10 @@
 						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 					</div>
 
-					<div class="card flex">
+					<div class="card item flex" data-name="Apartment">
 						<img src="images/property-06.jpg" />
 						<div class="card__header flex">
-							<span class="card__flag" id="modern">Modern Condo</span>
+							<span class="card__flag">Apartment</span>
 							<h6 class="card__price">$450.000</h6>
 						</div>
 
