Changed deal buttons to anchors and added href

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 						<div class="feature__icon flex"><img src="images/featured-icon.png" /></div>
 					</div>
-					<div class="faq-container">
+					<div class="faq-container id="here">
 						<div class="faq active">
 							<h4 class="faq-title">I'd like more info</h4>
 
@@ -181,14 +181,13 @@
 						<iframe
 							width="560"
 							height="315"
-							src="https://www.youtube.com/embed/-lUv-Mt2QD4?si=_WkM98QBVyfV_PqM"
+							src="https://www.youtube.com/embed/-lUv-Mt2QD4?si=xMJXI7THnVncfXLq"
 							title="YouTube video player"
 							frameborder="0"
-							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;"
 							referrerpolicy="strict-origin-when-cross-origin"
 							allowfullscreen
 						></iframe>
-						<div class="shadowbox"></div>
 					</div>
 				</div>
 
@@ -215,9 +214,9 @@
 					<h6>| Best Deal</h6>
 					<h2>Find Your Best Deal Right Now!</h2>
 					<div class="deal__btn-container flex">
-						<button class="btn__general">Apartment</button>
-						<button class="btn__general">Villa House</button>
-						<button class="btn__general">Penthouse</button>
+						<a href="#apartment" class="btn__general">Apartment</a>
+						<a href="#luxury" class="btn__general">Luxury Villa</a>
+						<a href="#penthouse" class="btn__general">Penthouse</a>
 					</div>
 					<div class="deal__container flex">
 						<img class="deal__image" src="images/property-05.jpg" />
@@ -304,7 +303,7 @@
 					<div class="card flex">
 						<img src="images/property-04.jpg" />
 						<div class="card__header flex">
-							<span class="card__flag" id="apartment">Apartment</span>
+							<span class="card__flag" <a id="apartment"</a>Apartment</span>
 							<h6 class="card__price">$584.500</h6>
 						</div>
 
@@ -462,5 +461,6 @@
 			</div>
 		</footer>
 		<script src="main.js"></script>
+		<script src="faq.js"></script>
 	</body>
 </html>
