Adjusted subhead navigation

--- a/index.html
+++ b/index.html
@@ -24,26 +24,18 @@
 					</ul>
 				</div>
 				<div class="social-container flex">
-					<ul class="flex">
+					<ul class="social-links flex">
 						<li>
-							<button href="#" class="social-toggle">
-								<span class="fa-brands fa-facebook social-icon"></span>
-							</button>
+							<a href="https://www.twitter.com" target="_blank" class="social-toggle"><span class="fa-brands fa-facebook social-icon"></span></a>
 						</li>
 						<li>
-							<button href="#" class="social-toggle">
-								<span class="fa-brands fa-twitter social-icon"></span>
-							</button>
+							<a href="https://www.twitter.com" target="_blank" class="social-toggle"><span class="fa-brands fa-twitter social-icon"></span></a>
 						</li>
 						<li>
-							<button href="#" class="social-toggle">
-								<span class="fa-brands fa-linkedin social-icon"></span>
-							</button>
+							<a href="https://www.linkedin.com" target="_blank" class="social-toggle"><span class="fa-brands fa-linkedin social-icon"></span></a>
 						</li>
 						<li>
-							<button href="#" class="social-toggle">
-								<span class="fa-brands fa-square-instagram social-icon"></span>
-							</button>
+							<a href="https://www.instagram.com" target="_blank" class="social-toggle"><span class="fa-brands fa-square-instagram social-icon"></span></a>
 						</li>
 					</ul>
 				</div>
