Added 2 new images

--- a/index.html
+++ b/index.html
@@ -64,8 +64,43 @@
 
 		<main>
 			<section class="hero">
-				<span>Toronto, <em>Canada</em></span>
-				<h1>Hurry!<br />Get the best villa for you</h1>
+				<div class="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item">
+							<img src="images/banner-01.jpg" alt="Image 1" />
+							<div class="carousel-item-overlay">
+								<span>Toronto, <em>Canada</em></span>
+								<h1>Hurry!<br />Get the best villa for you</h1>
+							</div>
+						</div>
+						<div class="carousel-item active">
+							<img src="images/banner-02.jpg" alt="Image 2" />
+							<div class="carousel-item-overlay">
+								<span>Melbourne, <em>Australia</em></span>
+								<h1>Be Quick!<br />Get the best villa in town</h1>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<img src="images/banner-03.jpg" alt="Image 3" />
+							<div class="carousel-item-overlay">
+								<span>Miami, <em>South Florida</em></span>
+								<h1>Act Now!<br />Get the highest level penthouse</h1>
+							</div>
+						</div>
+					</div>
+					<button class="carousel-control-prev" type="button">
+						<img src="images/left-arrow.svg" alt="" />
+					</button>
+					<button class="carousel-control-next" type="button">
+						<img src="images/right-arrow.svg" alt="" />
+					</button>
+					<div class="carousel-indicators">
+						<button type="button" data-slide-to="0" class="active"></button>
+						<button type="button" data-slide-to="1"></button>
+						<button type="button" data-slide-to="2"></button>
+						<!-- Add more indicators as needed -->
+					</div>
+					</div>
 			</section>
 
 			<section class="featured container">
