--- a/index.html
+++ b/index.html
@@ -65,23 +65,20 @@
 		<main>
 			<section class="hero">
 				<div class="carousel">
-					<div class="carousel-inner">
-						<div class="carousel-item">
-							<img src="images/banner-01.jpg" alt="Image 1" />
+					<div class="carousel-inner flex">
+						<div class="carousel-item active item1">
 							<div class="carousel-item-overlay">
 								<span>Toronto, <em>Canada</em></span>
 								<h1>Hurry!<br />Get the best villa for you</h1>
 							</div>
 						</div>
-						<div class="carousel-item active">
-							<img src="images/banner-02.jpg" alt="Image 2" />
+						<div class="carousel-item item2">
 							<div class="carousel-item-overlay">
 								<span>Melbourne, <em>Australia</em></span>
 								<h1>Be Quick!<br />Get the best villa in town</h1>
 							</div>
 						</div>
-						<div class="carousel-item">
-							<img src="images/banner-03.jpg" alt="Image 3" />
+						<div class="carousel-item item3">
 							<div class="carousel-item-overlay">
 								<span>Miami, <em>South Florida</em></span>
 								<h1>Act Now!<br />Get the highest level penthouse</h1>
